# avdan-window-manager

./: AWindow.qml  CMakeLists.txt  README.md  define.hpp  includes.hpp  main.cpp  main.qml  qml.qrc
.github/ISSUE_TEMPLATE/: feature_request.md  to-do.md
.github/workflows/: codeql-analysis.yml
